--- a/Frontend/src/Empresas.css
+++ b/Frontend/src/Empresas.css
@@ -1,20 +1,8 @@
-/* Estilo para la tabla y sus elementos */
-.empresa-table th,
-.empresa-table td {
-  text-align: left; /* Alinea el texto a la izquierda */
-  padding: 12px; /* Añade padding para mayor espacio */
-  border: 1px solid #ddd; /* Añade borde a las celdas para dividir filas y columnas */
+.custom-button {
+  background-color: #0B5345; 
+  color: white; 
 }
 
-.empresa-table th {
-  background-color: #f4f4f4; /* Color de fondo para el encabezado */
-  font-weight: bold;
-}
-
-.empresa-table tr:nth-child(even) {
-  background-color: #f9f9f9; /* Color de fondo para filas alternas */
-}
-
-.empresa-table tr:hover {
-  background-color: #e9e9e9; /* Color de fondo al pasar el ratón */
+.custom-button:hover {
+  background-color: #0A3C2C; 
 }
