--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+.custom-button {
+  background-color: #0B5345; 
+  color: white; 
+}
+
+.custom-button:hover {
+  background-color: #0A3C2C; 
+}
+
